src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Asst_Email__c</fullName>
        <label>Asst. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Execution__c</fullName>
        <formula>of_Seller_Transactions__c /  of_Listings__c</formula>
        <inlineHelpText>What is the broker&apos;s listing to close ratio?</inlineHelpText>
        <label>Broker Execution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Type__c</fullName>
        <label>Broker Type</label>
        <picklist>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Website__c</fullName>
        <label>Contact Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Core_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this contact a core client?</inlineHelpText>
        <label>Core Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Number__c</fullName>
        <label>Direct Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <externalId>true</externalId>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing Email List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketwatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketwatch 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Phone #</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Industry_Role__c</fullName>
        <label>Industry Role</label>
        <picklist>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Comments__c</fullName>
        <label>Phone Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Type__c</fullName>
        <description>Developer- Does this person develop and hold real estate?
Government Owner- Does this person belong to a government agency that owns the real estate?
Institutional Investor- Include insurance companies, retirement or pension funds, hedge funds, and investment advisors. 
Lender Owner- For REO assets
Merchant Developer- Does this person develop and sell real estate?
Private Investor- An investor who&apos;s primary business is not real estate
Professional Investor- An investor who&apos;s primary business is real estate
REIT- Real Estate Investment Trust (Public and Private)</description>
        <label>Principal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lender Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchant Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Cities__c</fullName>
        <label>Property Cities</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_Markets__c</fullName>
        <label>Property Markets</label>
        <picklist>
            <picklistValues>
                <fullName>AK-Anchorage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Huntsville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL-Montgomery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fayetteville/Springdale/Rogers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Fort Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR-Little Rock/N Little Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ-Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Bakersfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-East Bay/Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Fresno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Inland Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Marin/Sonoma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Sacramento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Salinas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-San Luis Obispo/Paso Robles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Barbara/Sta Maria/Goleta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Santa Cruz/Watsonville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-South Bay/San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Stockton/Modesto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA-Visalia/Porterville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Colorado Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO-Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT-Hartford</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_States__c</fullName>
        <label>Property States</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_Submarkets4__c</fullName>
        <label>Property Submarkets</label>
        <picklist>
            <picklistValues>
                <fullName>Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southside</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_Types__c</fullName>
        <label>Property Types</label>
        <picklist>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed-Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multifamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Property_Zips__c</fullName>
        <label>Property Zips</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rcm1_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rcm1 Sync&apos;ed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Research__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seller_Quality__c</fullName>
        <inlineHelpText>What is the principal&apos;s likelihood of selling?</inlineHelpText>
        <label>Seller Quality</label>
        <picklist>
            <picklistValues>
                <fullName>1. Will sell within 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Might sell within 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Will not sellwithin 6 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <inlineHelpText>Which time zone is this contact located within?</inlineHelpText>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <label>Vendor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appraiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Inspector</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <formula>Account.Website</formula>
        <label>Company Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Buyer_Transactions__c</fullName>
        <description>How many sales has the broker represented the buyer?</description>
        <label># of Buyer Transactions</label>
        <summaryFilterItems>
            <field>Broker_Role__c.Broker_s_Role__c</field>
            <operation>equals</operation>
            <value>Sale- Selling Broker</value>
        </summaryFilterItems>
        <summaryForeignKey>Broker_Role__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_First_Listing_Appointments__c</fullName>
        <label># of First Listing Appointments</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Type__c</field>
            <operation>equals</operation>
            <value>First Listing Appointment</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Listings__c</fullName>
        <description>How many properties has the broker listed?</description>
        <label># of Listings</label>
        <summaryFilterItems>
            <field>Broker_Role__c.Broker_s_Role__c</field>
            <operation>equals</operation>
            <value>Listing- Listing Broker</value>
        </summaryFilterItems>
        <summaryForeignKey>Broker_Role__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Properties__c</fullName>
        <description>How many Properties does this person own?</description>
        <label># of Properties</label>
        <summaryForeignKey>Ownership__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Seller_Transactions__c</fullName>
        <description>How many sales has the broker represented the seller?</description>
        <label># of Seller Transactions</label>
        <summaryFilterItems>
            <field>Broker_Role__c.Broker_s_Role__c</field>
            <operation>equals</operation>
            <value>Sale- Listing Broker</value>
        </summaryFilterItems>
        <summaryForeignKey>Broker_Role__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Developer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Principal_Type__c</field>
            <operation>equals</operation>
            <value>Developer</value>
        </filters>
        <label>&gt;Developer</label>
    </listViews>
    <listViews>
        <fullName>Institutional_Investor</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Principal_Type__c</field>
            <operation>equals</operation>
            <value>Institutional Investor</value>
        </filters>
        <label>&gt;Institutional Investor</label>
    </listViews>
    <listViews>
        <fullName>Investment_Brokers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Broker_Type__c</columns>
        <columns>of_Listings__c</columns>
        <columns>of_Seller_Transactions__c</columns>
        <columns>of_Buyer_Transactions__c</columns>
        <columns>Broker_Execution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Broker</value>
        </filters>
        <filters>
            <field>Broker_Type__c</field>
            <operation>includes</operation>
            <value>Investment</value>
        </filters>
        <label>&lt;Investment Brokers</label>
    </listViews>
    <listViews>
        <fullName>Leasing_Brokers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>Broker_Type__c</columns>
        <columns>of_Listings__c</columns>
        <columns>of_Seller_Transactions__c</columns>
        <columns>of_Buyer_Transactions__c</columns>
        <columns>Broker_Execution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Broker</value>
        </filters>
        <filters>
            <field>Broker_Type__c</field>
            <operation>includes</operation>
            <value>Leasing</value>
        </filters>
        <label>&lt;Leasing Brokers</label>
    </listViews>
    <listViews>
        <fullName>Merchant_Developer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Principal_Type__c</field>
            <operation>equals</operation>
            <value>Merchant Developer</value>
        </filters>
        <label>&gt;Merchant Developer</label>
    </listViews>
    <listViews>
        <fullName>Mortgage_Brokers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Broker</value>
        </filters>
        <filters>
            <field>Broker_Type__c</field>
            <operation>includes</operation>
            <value>Mortgage</value>
        </filters>
        <label>&lt;Mortgage Brokers</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private_Investors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Principal_Type__c</field>
            <operation>equals</operation>
            <value>Private Investor</value>
        </filters>
        <label>&gt;Private Investors</label>
    </listViews>
    <listViews>
        <fullName>Professional_Investors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Principal_Type__c</field>
            <operation>equals</operation>
            <value>Professional Investor</value>
        </filters>
        <label>&gt;Professional Investors</label>
    </listViews>
    <listViews>
        <fullName>REITs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Principal_Type__c</field>
            <operation>equals</operation>
            <value>REIT</value>
        </filters>
        <label>&gt;REITs</label>
    </listViews>
    <recordTypes>
        <fullName>Attorney</fullName>
        <active>true</active>
        <description>Is this person a real estate lawyer?</description>
        <label>Attorney</label>
    </recordTypes>
    <recordTypes>
        <fullName>Broker</fullName>
        <active>true</active>
        <description>Does this person primarily broker real estate?</description>
        <label>Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lender</fullName>
        <active>true</active>
        <description>Does this institution or individual loan a borrower money?</description>
        <label>Lender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <description>Does this individual operate commercial real estate?</description>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Is this person an assistant, media contact, etc.?</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Principal</fullName>
        <active>true</active>
        <description>Has this person owned real estate? Does this person currently own real estate? Would this person like to own real estate?</description>
        <label>Principal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tenant</fullName>
        <active>true</active>
        <description>Does this person occupy land or property rented from a landlord?</description>
        <label>Tenant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Title_Company</fullName>
        <active>true</active>
        <description>Is this person involved in examining and insuring title?</description>
        <label>Title Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Is this person a vendor?</description>
        <label>Vendor</label>
    </recordTypes>
</CustomObject>